kubernetes/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: tv
          mountPath: /tv
        - name: anime
          mountPath: /anime
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: tv
        persistentVolumeClaim:
          claimName: tv
      - name: anime
        persistentVolumeClaim:
          claimName: anime
