kubernetes/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  ports:
    - name: sonarr
      port: 80
      targetPort: 8989
  selector:
    app: sonarr
